# oracle-scripts

./: .gitignore  README.md  adrPurge.sh  asmcli.sh  call_db_backup  createConfigFile.sh  createDBConfig.py  createRMANScript.py  db-create.sh  db-delete.sh  db-dg-prep.sh  db-file-move.sh  db-hot-backup.sh  db-incr-merge.sh  db-restore.sh  db-s3-backup.sh  dnfsctl.sh  filecopy.sh  pyproject.toml  queryDBConfig.py  setup.sh  showarchivedlogs.sh  showcompression.sh  showdatafiles.sh  showdgprimary.sh  showdnfsinfo.sh  showlgstandby.sh  showpartitions.sh  showtablespacestatus.sh  start-all.sh  startdb  stop-all.sh  stopdb
19/: dbca-si-asm.rsp  dbca-si-cdb-asm.rsp  dbca-si-cdb.rsp  dbca-si.rsp
lib/: libcommon.sh  oracle_utils.py
lib/oracle_utils/: README.md  setup.py
lib/oracle_utils/oracle_utils/src/: oracle_utils.py
lib/oracle_utils/oracle_utils/src/oracle_utils.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/: CHANGELOG.md  LICENSE  README.md
src/oracle_utils/: __init__.py  config_query.py  db_config.py  oracle_utils.py  rman_script.py
