[project]
name = "oracle_utils"
version = "1.1.0"
description = "Oracle Utils"
requires-python = ">=3.8"
dependencies = []

[project.scripts]
db_config = "oracle_utils.db_config:main"
config_query = "oracle_utils.config_query:main"
rman_script = "oracle_utils.rman_script:main"

[dependency-groups]
test = [
    "pytest>=8.1.1",
    "pytest-asyncio>=0.23.6",
    "pytest-rerunfailures>=10.3",
    "pytest-mock>=3.6.1",
]
dev = [
    "hatch",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.version]
path = "src/oracle_utils/__init__.py"

[tool.hatch.build.targets.sdist]
packages = ["src/oracle_utils"]

[tool.hatch.build.targets.wheel]
packages = ["src/oracle_utils"]
